--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -3,9 +3,7 @@ name = "{{ cookiecutter.project_name }}"
 version = "0.1.0"
 description = ""
 authors = [
- "Timofei Mironov <timofei.mironov@playgendary.com>",
- "Vadim Merkulov <vadim.merkulov@playgendary.com>",
- "Georgij Halaburda <georgij.halaburda@playgendary.com>"
+ "Timofei Mironov <timirlan666@gmail.com>",
 ]
 readme = "README.md"
 
@@ -16,13 +14,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 pydantic = "^1.8.2"
-asana = "^0.10.3"
-sentry-sdk = "^1.5.1"
-functions-framework = "^3.0.0"
-Flask = "^2.0.2"
-blinker = "^1.4"
 python-dotenv = "^0.19.2"
-loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -42,9 +34,5 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [[tool.mypy.overrides]]
-module = [
-    "pygsheets",
-    "google.*",
-    "asana",
-]
+module = []
 ignore_missing_imports = true
